--- a/index.html
+++ b/index.html
@@ -28,7 +28,35 @@
         </div>
     </header>
 
-
+    <div class="main">
+        <section class="section__about">
+           <div class="u-text-center u-margin-bottom-big">
+            <h2 class="heading__secondary">
+                Exiting tours for adventurous people
+            </h2>
+           </div>
+           <div class="row">
+            <div class="col-1-of-2">
+                <h3 class="heading-tertiary u-margin-bottom-small">
+                    You're going to fall in love with nature
+                </h3>
+                <p class="paragraph">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis ipsa enim eum, aliquid ipsum quam esse non velit quos reprehenderit neque necessitatibus nobis ex, est nihil amet! Porro, odit natus?
+                </p>
+                <h3 class="heading-tertiary u-margin-bottom-small">
+                    Live adventure like you never have before.
+                </h3>
+                <p class="paragraph">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis ipsa enim eum, aliquid ipsum quam esse non velit quos reprehenderit neque necessitatibus 
+                </p>
+                <a href="#" class="btn-text">learn more &rarr;</a>
+            </div>
+            <div class="col-1-of-2">
+                image
+            </div>
+           </div>
+        </section>
+    </div>
     <!-- <section class="grid-test">
         <div class="row">
             <div class="col-1-of-2">
