--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet"> 
 
     <!-- CSS files -->
+    <link rel="stylesheet" href="css/icon-style.css">
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -49,13 +50,94 @@
                 <p class="paragraph">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis ipsa enim eum, aliquid ipsum quam esse non velit quos reprehenderit neque necessitatibus 
                 </p>
-                <a href="#" class="btn-text">learn more &rarr;</a>
+                <a href="" class="btn-text">learn more &rarr;</a>
             </div>
             <div class="col-1-of-2">
-                image
+                <div class="composition">
+                    <img src="img/nat-1-large.jpg " alt="Photo-1" class="composition__photo composition__photo--p1">
+                    <img src="img/nat-2-large.jpg  " alt="Photo-2" class="composition__photo composition__photo--p2">
+                    <img src="img/nat-3-large.jpg" alt="Photo-3" class="composition__photo composition__photo--p3">
+                </div>
             </div>
            </div>
         </section>
+
+        <section class="section-features">
+            <div class="row">
+                <div class="col-1-of-4">
+                    <div class="features-box">
+                        <i class="features-box__icon icon-basic-world"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small">explore the world</h3>
+                        <p class="feature-box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente aspernatur. </p>
+                    </div>
+                </div>
+                <div class="col-1-of-4">
+                    <div class="features-box">
+                        <i class="features-box__icon icon-basic-compass"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small">meet nature</h3>
+                        <p class="feature-box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente aspernatur. </p>
+                    </div>
+                </div>
+                <div class="col-1-of-4">
+                    <div class="features-box">
+                        <i class="features-box__icon icon-basic-map"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small">find your way</h3>
+                        <p class="feature-box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente aspernatur. </p>
+                    </div>
+                </div>
+                <div class="col-1-of-4">
+                    <div class="features-box">
+                        <i class="features-box__icon icon-basic-heart"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small">live a healthier life</h3>
+                        <p class="feature-box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente aspernatur. </p>
+                    </div>
+                </div>
+                 
+            </div>
+        </section>
+
+        <!-- section tour starts here -->
+        <section class="section-tour">
+            <div class="u-text-center u-margin-bottom-big">
+                <h2 class="heading__secondary">
+                    most popular tours
+                </h2>
+            </div>
+
+            <div class="row">
+                <div class="col-1-of-3">
+                    <div class="card">
+                        <div class="card__side card__side--front">
+                            <div class="card__picture card__picture-1">
+                               
+                            </div>
+                            <div class="card__heading">
+                                <span class="card__heading-span card__heading-span--1">the sea explorer</span>
+                            </div>
+                            <div class="card__details">
+                                <ul>
+                                    <li>3 days tour</li>
+                                    <li>Up to 30 people</li>
+                                    <li>2 tour guides</li>
+                                    <li>Sleep in cozy hotels</li>
+                                    <li>Difficulty: Easy</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card__side card__side--back card__side--back-1">
+                            back
+                        </div>
+                    </div>
+                </div>
+                <div class="col-1-of-3">
+                    col-1-of-3
+                </div>
+                <div class="col-1-of-3">
+                    col-1-of-3
+                </div>
+            </div>
+        </section>
+        <!-- section tour ends here -->
     </div>
     <!-- <section class="grid-test">
         <div class="row">
