story section added

--- a/index.html
+++ b/index.html
@@ -201,6 +201,53 @@
             </div>
         </section>
         <!-- section tour ends here -->
+
+        <!-- section stories starts here -->
+        <section class="section-stories">
+            <div class="bg-video">
+                <video class="bg-video__content" autoplay muted loop>
+                    <source src="img/video.mp4" type="video/mp4">
+                    <source src="img/video.webm" type="video/webm">
+               </video>
+            </div>
+            <div class="u-text-center u-margin-bottom-big">
+                <h2 class="heading__secondary">
+                    We make people genuinely happy 
+                </h2>
+               </div>
+               <div class="row">
+                   <div class="story">
+                       <figure class="story__shape">
+                        <img src="img/nat-8.jpg" alt="person on a tour" class="story__img">
+                        <figcaption class="story__caption">
+                            marry smith
+                        </figcaption>
+                       </figure>
+                       <div class="story__text">
+                           <h3 class="heading-tertiary u-margin-bottom-small">i had the best time with my family this time</h3>
+                           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam ullam officia magni voluptatibus dolorem et nobis quidem obcaecati quam ratione?Lorem ipsum dolor sit amet. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, obcaecati rem tempore adipisci ea beatae distinctio?</p>
+                       </div>
+                   </div>
+               </div>
+               <div class="row">
+                   <div class="story">
+                       <figure class="story__shape">
+                        <img src="img/nat-9.jpg" alt="person on a tour" class="story__img">
+                        <figcaption class="story__caption">
+                            john doe
+                        </figcaption>
+                       </figure>
+                       <div class="story__text">
+                           <h3 class="heading-tertiary u-margin-bottom-small">WoW! my life is completely different now.</h3>
+                           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam ullam officia magni voluptatibus dolorem et nobis quidem obcaecati quam ratione?Lorem ipsum dolor sit amet. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, obcaecati rem tempore adipisci ea beatae distinctio?</p>
+                       </div>
+                   </div>
+               </div>
+               <div class="u-text-center u-margin-top-huge">
+                <a href="" class="btn-text">read all stories &rarr;</a>
+               </div>
+        </section>
+        <!-- section stories ends here -->
     </div>
     <!-- <section class="grid-test">
         <div class="row">
